Target JDK 21, build with JDK 25
WIP:
- Move Refaster rule changes to a separate PR.
- Investigate other cleanup opportunities.